--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,22 +2,28 @@
 version: 2.1
 # Orchestrate or schedule a set of jobs
 jobs:
-  print_hello:
+  save_hello_world_output:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: echo hello
-  print_world:
+      - run: echo "text to output here" > ~/output.txt
+      - persist_to_workspace:
+            root: ~/
+            paths:
+              - output.txt
+  print_output_file:
     docker:
+      - attach_workspace:
+          at: ~/
       - image: circleci/node:13.8.0
     steps:
-      - run: echo world
+      - run: cat ~/output.txt
+
 workflows:
-  # Name the workflow "welcome"
-  welcome:
+  myworkflow:
     # Run the welcome/run job in its own container
     jobs:
-      - print_hello
-      - print_world:
+      - save_hello_world_output:
+      - print_output_file:
           requires:
-            - print_hello
+            - save_hello_world_output
